@@ -55,6 +55,11 @@
       slashes from filenames.</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">dir</td> 
+    <td valign="top">The directory in which to run the patch command.</td>
+    <td align="center" valign="top">No, default is the project's basedir.</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>  &lt;patch patchfile=&quot;module.1.0-1.1.patch&quot;/&gt;</pre>
@@ -69,7 +74,7 @@ the diff output looked like</p>
 </pre> 
 the leading <i>a/</i> will be stripped.
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2001-2002 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
